--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@
 
 # app.py: 1,2,3
 Flask == 0.12.2
-psycopg == 2.7.3.2
 
 # database.py: 2,3
 SQLAlchemy == 1.1.15
@@ -12,3 +11,4 @@ SQLAlchemy == 1.1.15
 passlib == 1.7.1
 
 gunicorn==19.7.1
+psycopg2==2.7.3.2
